app/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: helloworld-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: helloworld.local
      http:
        paths:
          - path: /hello
            pathType: Prefix
            backend:
              service:
                name: helloworld
                port:
                  number: 8080
